@@ -6,6 +6,8 @@ wajig (2.15~pre) UNRELEASED; urgency=low
     also get rid of '--simulate' and '--teach' CLI options... they'd be a
     lie here, given the extra logic
 
+  * LISTFILES: display contents of uninstalled packages if apt-file is installed
+
  -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Sat, 04 Oct 2014 00:24:08 +0200
 
 wajig (2.14) unstable; urgency=low
